# textformat

./: LICENSE  README.md  pyproject.toml  test.py
textfmt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
textformat/: __init__.py  progress.py  table.py  textformat.py  word_art.py
