[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textfmt"
version = "0.2.1"
description = "Terminal Formatting for Humans"
authors = [{name = "Rihaan Meher", email = "meherrihaan@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"

[tool.setuptools]
packages = ["textformat"]

[project.urls]
"Homepage" = "https://github.com/sharktide/textformat"

